# basque-stanza-server

./: .env.example  .gitignore  ARCHITECTURE.eu.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.eu.md  README.md  biome.json  main.py  package-lock.json  package.json  pyproject.toml  stanza_playground.py  test_itzuli_mcp_server.py
backend/: .dockerignore  ARCHITECTURE.eu.md  ARCHITECTURE.md  Dockerfile  README.eu.md  README.md  fly.toml  pyproject.toml
backend/tests/alignment_server/: test_cache.py  test_claude_integration.py  test_integration_manual.py  test_rate_limiter.py  test_scaffold_manual.py  test_server.py
backend/tests/core/: test_formatters.py  test_nlp.py  test_workflow.py
backend/tests/mcp_server/: test_itzuli_mcp_server.py
backend/tools/: dual_analysis.py  generate_scaffold.py
backend/tools/playground/: stanza_playground.py
frontend/: .env  biome.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AlignmentLabel.tsx  AlignmentVisualizer.tsx  AnimatedTitle.css  AnimatedTitle.tsx  CompactHeader.tsx  FullHeader.tsx  LanguageSwitcher.tsx  LayerPicker.tsx  ModeToggle.tsx  (+3 more)
itzuli_nlp/: formatters.py  nlp.py  workflow.py
itzuli_stanza_mcp/: formatters.py  i18n.py  itzuli_mcp_server.py  nlp.py  services.py  types.py  workflow.py
itzuli_stanza_mcp/types/: alignment.py
mcp_server/: server.py  services.py
scripts/: __init__.py  dual_analysis.py
tests/: test_formatters.py  test_itzuli_mcp_server.py  test_nlp.py  test_workflow.py
(+20 files in other folders)
